Generate Pelican site

--- a/contact.html
+++ b/contact.html
@@ -11,21 +11,20 @@
 </title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="/theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./theme/img/favicon.png">
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="/theme/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./theme/css/bootstrap.min.css" />
 
   <!-- Custom styles -->
-  <link rel="stylesheet" type="text/css" href="/theme/css/style.css" />
-  <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
   <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500,700'>
 
   <!-- JQuery -->
-  <script src="/theme/js/jquery-3.2.0.min.js"></script>
+  <script src="./theme/js/jquery-3.2.0.min.js"></script>
 
 
-  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Grégory D'Angelo - Data Science, Machine Learning, & Artificial Intelligence Full Atom Feed" />
 
 </head>
 
@@ -40,7 +39,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="">Grégory D'Angelo</a>
+        <a class="navbar-brand" href="./">Grégory D'Angelo</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,7 +58,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/about.html">About Greg</a></li>
+              <li><a href="./about.html">About Greg</a></li>
                   <li><a href="http://twitter.com/gdangel0">Twitter</a></li>
                   <li><a href="https://www.linkedin.com/in/gregorydangelo">LinkedIn</a></li>
                   <li><a href="https://github.com/gdangelo">Github</a></li>
@@ -149,13 +148,13 @@
 </section>  </div>
 
   <!-- Bootstrap core JS -->
-  <script src="/theme/js/bootstrap.min.js"></script>
+  <script src="./theme/js/bootstrap.min.js"></script>
 
   <!-- d3.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
 
   <!-- Custom scripts -->
-  <script src="/theme/js/app.js"></script>
+  <script src="./theme/js/app.js"></script>
 
 </body>
 </html>
