--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
   <title>Grégory D'Angelo - Data Science, Machine Learning, & Artificial Intelligence</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="/theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./theme/img/favicon.png">
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="/theme/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./theme/css/bootstrap.min.css" />
 
   <!-- Custom styles -->
-  <link rel="stylesheet" type="text/css" href="/theme/css/style.css" />
-  <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
   <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500,700'>
 
   <!-- JQuery -->
-  <script src="/theme/js/jquery-3.2.0.min.js"></script>
+  <script src="./theme/js/jquery-3.2.0.min.js"></script>
 
 
-  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Grégory D'Angelo - Data Science, Machine Learning, & Artificial Intelligence Full Atom Feed" />
 
 </head>
 
@@ -39,7 +38,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="">Grégory D'Angelo</a>
+        <a class="navbar-brand" href="./">Grégory D'Angelo</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,7 +57,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/about.html">About Greg</a></li>
+              <li><a href="./about.html">About Greg</a></li>
                   <li><a href="http://twitter.com/gdangel0">Twitter</a></li>
                   <li><a href="https://www.linkedin.com/in/gregorydangelo">LinkedIn</a></li>
                   <li><a href="https://github.com/gdangelo">Github</a></li>
@@ -141,7 +140,7 @@
             I am a Computer Engineer with a Passion for Deep Learning and Self-Driving Cars. I am currently enrolled in the Machine Learning and Self-Driving Cars Nanodegree programs at Udacity.<br/><br/>
             Take a look at my <a href="#work" class="highlight smooth-scroll">work</a>, <a href="#blog" class="highlight smooth-scroll">read my blog</a>, or <a href="#contact" class="highlight smooth-scroll">get in touch</a>!
           </p>
-          <a href="/about" type="button" class="btn btn-lg btn-white-rounded">Want to know more?</a>
+          <a href="./about" type="button" class="btn btn-lg btn-white-rounded">Want to know more?</a>
         </div>
       </div>
     </div>
@@ -299,24 +298,24 @@
 </section>  </div>
 
   <!-- Bootstrap core JS -->
-  <script src="/theme/js/bootstrap.min.js"></script>
+  <script src="./theme/js/bootstrap.min.js"></script>
 
   <!-- d3.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
 
   <!-- Custom scripts -->
-  <script src="/theme/js/app.js"></script>
+  <script src="./theme/js/app.js"></script>
 
 <!-- particle.js -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 <!-- Typed.js -->
-<script src="/theme/js/typed.min.js"></script>
+<script src="./theme/js/typed.min.js"></script>
 
 <!-- mixItUp.js -->
-<script src="/theme/js/mixitup.min.js"></script>
+<script src="./theme/js/mixitup.min.js"></script>
 
 <!-- home.js -->
-<script src="/theme/js/home.js"></script>
+<script src="./theme/js/home.js"></script>
 </body>
 </html>
