--- a/search.html
+++ b/search.html
@@ -11,22 +11,21 @@
 </title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="/theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./theme/img/favicon.png">
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="/theme/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./theme/css/bootstrap.min.css" />
 
   <!-- Custom styles -->
-  <link rel="stylesheet" type="text/css" href="/theme/css/style.css" />
-  <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
   <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500,700'>
 
   <!-- JQuery -->
-  <script src="/theme/js/jquery-3.2.0.min.js"></script>
+  <script src="./theme/js/jquery-3.2.0.min.js"></script>
 
-  <link href="/theme/tipuesearch/css/tipuesearch.css" rel='stylesheet' type='text/css'>
+  <link href="./theme/tipuesearch/css/tipuesearch.css" rel='stylesheet' type='text/css'>
 
-  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Grégory D'Angelo - Data Science, Machine Learning, & Artificial Intelligence Full Atom Feed" />
 
 </head>
 
@@ -41,7 +40,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="">Grégory D'Angelo</a>
+        <a class="navbar-brand" href="./">Grégory D'Angelo</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,7 +59,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/about.html">About Greg</a></li>
+              <li><a href="./about.html">About Greg</a></li>
                   <li><a href="http://twitter.com/gdangel0">Twitter</a></li>
                   <li><a href="https://www.linkedin.com/in/gregorydangelo">LinkedIn</a></li>
                   <li><a href="https://github.com/gdangelo">Github</a></li>
@@ -157,31 +156,31 @@
 </section>  </div>
 
   <!-- Bootstrap core JS -->
-  <script src="/theme/js/bootstrap.min.js"></script>
+  <script src="./theme/js/bootstrap.min.js"></script>
 
   <!-- d3.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
 
   <!-- Custom scripts -->
-  <script src="/theme/js/app.js"></script>
+  <script src="./theme/js/app.js"></script>
 
   <!-- masonry.js -->
-  <script src="/theme/js/masonry.pkgd.min.js"></script>
+  <script src="./theme/js/masonry.pkgd.min.js"></script>
 
   <!-- catagory.js -->
-  <script src="/theme/js/category.js"></script>
+  <script src="./theme/js/category.js"></script>
 
   <!-- tipuesearch.js -->
-  <script type="text/javascript" src="/theme/tipuesearch/tipuesearch_content.js"></script>
-  <script type="text/javascript" src="/theme/tipuesearch/tipuesearch_set.js"></script>
-  <script type="text/javascript" src="/theme/tipuesearch/tipuesearch.js"></script>
+  <script type="text/javascript" src="./theme/tipuesearch/tipuesearch_content.js"></script>
+  <script type="text/javascript" src="./theme/tipuesearch/tipuesearch_set.js"></script>
+  <script type="text/javascript" src="./theme/tipuesearch/tipuesearch.js"></script>
 
   <script>
     $(document).ready(function() {
       $('#tipue_search_input').tipuesearch({
         'mode' : 'json',
         'show': 1000,
-        'contentLocation': '/tipuesearch_content.json'
+        'contentLocation': './tipuesearch_content.json'
       });
     });
   </script>
