--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="./theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./favicon.png">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./theme/css/bootstrap.min.css" />
