--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Grégory D'Angelo - Data Science, Machine Learning, & Artificial Intelligence</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="./theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./favicon.png">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./theme/css/bootstrap.min.css" />
